2002-05-27  Paolo Maggi  <maggi@athena.polito.it>

	* sample/sample.c: print the username if the real name is
	long 0 chars (fix bug #75863, I hope)

2002-05-27  James Willcox <jwillcox@cs.indiana.edu>

	* cvschangelog/cvschangelog.c:  Fix some memory leaks.

2002-05-27  James Willcox <jwillcox@cs.indiana.edu>
	
	* cvschangelog/cvschangelog.c:  Fixed bug #82333, and other
	misc. cleanup.

2002-04-24  Hema Seetharamaiah <hema.seetharamaiah@wipro.com>

	* Bug # 79203. Added accessible name/description. 
	* Files affected : diff/diff.glade2

2002-04-17  Paolo Maggi  <maggi@athena.polito.it>

	* taglist/gedit-taglist-plugin-window.c;
	* taglist/gedit-taglist-plugin.[ch]: now View->TagList 
	is a checkbox button (bug #75636)

2002-04-16  Hema Seetharamaiah <hema.seetharamaiah@wipro.com>

	* Accessibility Changes. Mainly setting up of relations, 
        Accessible name/descriptions.
	
	Files affected :
	 - diff/diff.glade2
	 - shell_output/shell_output.glade2,
	 - taglist/gedit-taglist-plugin-window.c

2002-04-04  Paolo Maggi  <maggi@athena.polito.it>

	* taglist/gedit-taglist-plugin-window.c: use Ctrl + W (instead
	of Alt + F4) to close the taglist window (bug #76763)

2002-03-27  Paolo Maggi  <maggi@athena.polito.it>

	* ASCII/asciitable.glade2:
	* diff/diff.glade2:
	* docinfo/docinfo.glade2:
	* shell_output/shell_output.glade2:
	* time/time.glade2: fix bug #76341

2002-03-27  Paolo Maggi  <maggi@athena.polito.it>

	* taglist/gedit-taglist-plugin-window.c: use Alt + F4 (instead
	of ESC) to close the taglist window (bug #75636)

2002-03-07  Paolo Maggi  <maggi@athena.polito.it>

	* ASCII/ascii.c: fix bug #71841
	
	* diff/diff.c: ditto, use gedit_plugin_locate_program instead of
	gedit_plugin_program_location_dialog

	* shell_output/shell_output.c: fix bug# 71841

	* taglist/gedit-taglist-plugin-window.c: ditto

	* time/time.c: ditto

2002-02-22  Paolo Maggi  <maggi@athena.polito.it>

	In menus, all the words (except 'and') should start 