@@ -1,3 +1,11 @@
+2002-07-03  Paolo Maggi  <maggi@athena.polito.it>
+
+	* sample/sample.c (sample_cb): convert the username to UTF-8 
+	if needed
+
+	* time/time.c (get_time): convert the time string to UTF-8 
+	if needed (fix bug #86491)
+
 2002-05-27  Paolo Maggi  <maggi@athena.polito.it>
 
 	* sample/sample.c: print the username if the real name is
